<resources>
    <string name="app_name">StashClient</string>
    <string name="fragment_login_username_hint">Username</string>
    <string name="fragment_login_password_hint">Password</string>
    <string name="fragment_login_server_toggle">Connect to My Server</string>
    <string name="fragment_login_server_hint">stash.example.com</string>
    <string name="fragment_login_save_details">Save these Details</string>
    <string name="fragment_login_submit">Log in</string>

    <string name="preferences_account_title">Account Settings</string>
    <string name="preferences_account_summary">Sync notifications, etc.</string>

    <!-- Example / Default Strings -->
    <string name="name">Name</string>
    <string name="description">This is a description and it is loooong!</string>

    <!-- Menus -->
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>

    <string name="menu_repository_subheader_actions">ACTIONS</string>
    <string name="menu_repository_action_download">Download</string>
    <string name="menu_repository_action_clone">Clone</string>
    <string name="menu_repository_action_create_branch">Create branch</string>
    <string name="menu_repository_action_create_pull_request">Create pull request</string>
    <string name="menu_repository_action_fork">Fork</string>
    <string name="menu_repository_subheader_navigation">NAVIGATION</string>
    <string name="menu_repository_nav_source">Source</string>
    <string name="menu_repository_nav_commits">Commits</string>
    <string name="menu_repository_nav_branches">Branches</string>
    <string name="menu_repository_nav_pull_requests">Pull requests</string>

    <string name="download_success">Download Finished!</string>
    <string name="download_failed">Download Failed!</string>
    <string name="download_canceled">Download Canceled!</string>
    <string name="stop">Stop</string>
    <string name="error">Error</string>
    <string name="clone_clip_description">Clone URL</string>
    <string name="clone_copy_success">Copied Clone URL to Clipboard</string>
</resources>
